--- a/prometheus.yml
+++ b/prometheus.yml
@@ -26,3 +26,6 @@ scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
       - targets: ['localhost:9100']
+  - job_name: 'bcr_export'
+    static_configs:
+      - targets: ['localhost:8000']
